feat: Término do BackEnd